--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@auth/drizzle-adapter": "^1.1.0",
     "@breezystack/lamejs": "^1.2.7",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.0",
