--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loader-spinner": "^6.1.6",
     "react-webcam": "^7.2.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
