--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@aws-sdk/client-s3": "^3.637.0",
     "@aws-sdk/s3-request-presigner": "^3.637.0",
     "@breezystack/lamejs": "^1.2.7",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@types/fluent-ffmpeg": "^2.1.25",
     "ai": "^3.3.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.33.0",
+    "fluent-ffmpeg": "^2.1.3",
     "geist": "^1.3.0",
     "lucide-react": "^0.428.0",
     "next": "^14.2.4",
